; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_splice.c_do_tee.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_splice.c_do_tee.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.pipe_inode_info = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, %struct.file*, i64, i32)* @do_tee to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @do_tee(%struct.file* %0, %struct.file* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.file*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.pipe_inode_info*, align 8
  %10 = alloca %struct.pipe_inode_info*, align 8
  %11 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store %struct.file* %1, %struct.file** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load %struct.file*, %struct.file** %5, align 8
  %13 = getelementptr inbounds %struct.file, %struct.file* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call %struct.pipe_inode_info* @pipe_info(i32 %17)
  store %struct.pipe_inode_info* %18, %struct.pipe_inode_info** %9, align 8
  %19 = load %struct.file*, %struct.file** %6, align 8
  %20 = getelementptr inbounds %struct.file, %struct.file* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call %struct.pipe_inode_info* @pipe_info(i32 %24)
  store %struct.pipe_inode_info* %25, %struct.pipe_inode_info** %10, align 8
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %11, align 4
  %28 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %9, align 8
  %29 = icmp ne %struct.pipe_inode_info* %28, null
  br i1 %29, label %30, label %57

30:                                               ; preds = %4
  %31 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %10, align 8
  %32 = icmp ne %struct.pipe_inode_info* %31, null
  br i1 %32, label %33, label %57

33:                                               ; preds = %30
  %34 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %9, align 8
  %35 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %10, align 8
  %36 = icmp ne %struct.pipe_inode_info* %34, %35
  br i1 %36, label %37, label %57

37:                                               ; preds = %33
  %38 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %9, align 8
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @ipipe_prep(%struct.pipe_inode_info* %38, i32 %39)
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %11, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %56, label %43

43:                                               ; preds = %37
  %44 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %10, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @opipe_prep(%struct.pipe_inode_info* %44, i32 %45)
  store i32 %46, i32* %11, align 4
  %47 = load i32, i32* %11, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %55, label %49

49:                                               ; preds = %43
  %50 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %9, align 8
  %51 = load %struct.pipe_inode_info*, %struct.pipe_inode_info** %10, align 8
  %52 = load i64, i64* %7, align 8
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @link_pipe(%struct.pipe_inode_info* %50, %struct.pipe_inode_info* %51, i64 %52, i32 %53)
  store i32 %54, i32* %11, align 4
  br label %55

55:                                               ; preds = %49, %43
  br label %56

56:                                               ; preds = %55, %37
  br label %57

57:                                               ; preds = %56, %33, %30, %4
  %58 = load i32, i32* %11, align 4
  %59 = sext i32 %58 to i64
  ret i64 %59
}

declare dso_local %struct.pipe_inode_info* @pipe_info(i32) #1

declare dso_local i32 @ipipe_prep(%struct.pipe_inode_info*, i32) #1

declare dso_local i32 @opipe_prep(%struct.pipe_inode_info*, i32) #1

declare dso_local i32 @link_pipe(%struct.pipe_inode_info*, %struct.pipe_inode_info*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
